--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
         crate:
           - sccache
           - wasm-bindgen-cli
+          - cargo-sort
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v2
