--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build tools cache
 on:
   push:
     branches:
-      - main
+    - main
   schedule:
-    - cron: "0 0 * * *"
+  - cron: "0 0 * * *"
   workflow_dispatch: null
 
 jobs:
@@ -14,32 +14,34 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - windows-2019
-          - windows-2022
-          - ubuntu-20.04
-          - ubuntu-22.04
-          - macos-11
-          - macos-12
+        - windows-2019
+        - windows-2022
+        - ubuntu-20.04
+        - ubuntu-22.04
+        - macos-11
+        - macos-12
+        - buildjet-4vcpu-ubuntu-2204
+        - buildjet-4vcpu-ubuntu-2204-arm
         crate:
-          - sccache
-          - wasm-bindgen-cli
-          - cargo-sort
+        - sccache
+        - wasm-bindgen-cli
+        - cargo-sort
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: python -m pip install -r requirements.txt
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: Install dependencies
+      run: python -m pip install -r requirements.txt
 
-      - name: Build ${{ matrix.crate }}
-        run: python build.py
-        env:
-          CRATE: ${{ matrix.crate }}
-          RUNNER: ${{ matrix.os }}
-          AWS_S3_REGION: us-west-2
-          AWS_S3_BUCKET: rust-tool-cache
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          # SIGN_CERT: ${{ secrets.SIGN_CERT }}
-          # SIGN_CERT_PASSPHRASE: ${{ secrets.SIGN_CERT_PASSPHRASE }}
+    - name: Build ${{ matrix.crate }}
+      run: python build.py
+      env:
+        CRATE: ${{ matrix.crate }}
+        RUNNER: ${{ matrix.os }}
+        AWS_S3_REGION: us-west-2
+        AWS_S3_BUCKET: rust-tool-cache
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        # SIGN_CERT: ${{ secrets.SIGN_CERT }}
+        # SIGN_CERT_PASSPHRASE: ${{ secrets.SIGN_CERT_PASSPHRASE }}
