--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,16 @@ jobs:
         - cargo-sort
     steps:
     - uses: actions/checkout@v4
+    - uses: IronCoreLabs/rust-toolchain@v1
+      with:
+        toolchain: stable
+    - if: ${{ matrix.os }} != "buildjet-4vcpu-ubuntu-2204-arm"
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
     - name: Install dependencies
       run: python -m pip install -r requirements.txt
+
     - name: Build ${{ matrix.crate }}
       run: python build.py
       env:
