--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
         - ubuntu-22.04
         - macos-11
         - macos-12
+        - macos-14
         - buildjet-2vcpu-ubuntu-2204
         - buildjet-4vcpu-ubuntu-2204-arm
         crate:
