--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
         - windows-2022
         - ubuntu-20.04
         - ubuntu-22.04
+        - ubuntu-24.04
         - macos-11
         - macos-12
         - macos-14
