Add refinery-cli to the rust tool cache

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
         - sccache
         - wasm-bindgen-cli
         - cargo-sort
+        - refinery-cli
     steps:
     - uses: actions/checkout@v4
     - uses: IronCoreLabs/rust-toolchain@v1
