--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,12 @@
-name: Build tools cache
+name: Build tools cache 
 on:
   push:
     branches:
-    - main
+      - main
   pull_request:
   schedule:
-  - cron: "0 0 * * *"
-  workflow_dispatch: null
+    - cron: "0 0 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
@@ -15,38 +15,31 @@ jobs:
       fail-fast: false
       matrix:
         os:
-        - windows-2022
-        - ubuntu-22.04
-        - ubuntu-24.04
-        - macos-13
-        - macos-14
-        - buildjet-2vcpu-ubuntu-2204
-        - buildjet-4vcpu-ubuntu-2204-arm
+          - windows-2022
+          - ubuntu-22.04
+          - ubuntu-24.04
+          - ubuntu-24.04-arm
+          - macos-13
+          - macos-14
+          - macos-15
         crate:
-        - sccache
-        - wasm-bindgen-cli
-        - cargo-sort
-        - refinery_cli
+          - sccache
+          - wasm-bindgen-cli
+          - cargo-sort
+          - refinery_cli
     steps:
-    - uses: actions/checkout@v4
-    - uses: IronCoreLabs/rust-toolchain@v1
-      with:
-        toolchain: stable
-    - if:  matrix.os != 'buildjet-4vcpu-ubuntu-2204-arm'
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
-    - name: Install dependencies
-      run: python -m pip install -r requirements.txt
-
-    - name: Build ${{ matrix.crate }}
-      run: python build.py
-      env:
-        CRATE: ${{ matrix.crate }}
-        RUNNER: ${{ matrix.os }}
-        AWS_S3_REGION: us-west-2
-        AWS_S3_BUCKET: rust-tool-cache
-        AWS_ACCESS_KEY_ID: ${{ vars.TOOL_CACHE_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.TOOL_CACHE_SECRET_KEY }}
-        # SIGN_CERT: ${{ secrets.SIGN_CERT }}
-        # SIGN_CERT_PASSPHRASE: ${{ secrets.SIGN_CERT_PASSPHRASE }}
+      - uses: actions/checkout@v5
+      - uses: IronCoreLabs/rust-toolchain@v1
+        with:
+          toolchain: stable
+      - name: Install dependencies
+        run: python -m pip install -r requirements.txt
+      - name: Build ${{ matrix.crate }}
+        run: python build.py
+        env:
+          CRATE: ${{ matrix.crate }}
+          RUNNER: ${{ matrix.os }}
+          AWS_S3_REGION: us-west-2
+          AWS_S3_BUCKET: rust-tool-cache
+          AWS_ACCESS_KEY_ID: ${{ vars.TOOL_CACHE_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.TOOL_CACHE_SECRET_KEY }}
